# byrdie

./: .gitignore  README.md  agent_notes.txt  app.py  autodoc-plan.md  gitdepends.txt  plan.md  project-structure.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_dev.sh  tasks.md  test_discovery.py  wove.md
.github/: DISCUSSIONS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
blog/: models.py  views.py
components/: note.html
docs/source/: conf.py  getting-started.md  index.md
docs/source/api/: byrdie.api.md  byrdie.md
docs/source/core-concepts/: frontend-bridge.md  models-and-components.md
docs/source/integrations/: alpinejs.md  django.md  wove.md
examples/tutorials/: index.md
examples/tutorials/auth/: app.py
examples/tutorials/auth/templates/: login.html
examples/tutorials/blog/: app.py
examples/tutorials/blog/components/: post.html
examples/tutorials/blog/templates/: index.html
migrations/: 0001_initial.py
src/byrdie/: api.py  apps.py  auth.py  cli.py  models.py  rendering.py  responses.py  routing.py  schemas.py  urls.py  utils.py  views.py
src/byrdie/migrations/: 0001_initial.py
src/byrdie/templatetags/: byrdie_tags.py
src/byrdie/tests/: settings.py
static/js/: byrdie.js
templates/: base.html  homepage.html  login.html
templates/components/: note.html
tests/: models.py  test_rendering.py  test_routing.py  test_serialization.py
